[gd_scene load_steps=2 format=3 uid="uid://58gsiikt2u17"]

[ext_resource type="Script" path="res://words file/word_pair.gd" id="1_cfhog"]

[node name="WordPair" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_cfhog")

[node name="NewWord" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "new word"

[node name="NatWord" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "natural word"
